Openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-dev
  namespace: ubiowororuki-dev
spec:
  selector:
    app: myapp-dev
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
